# Study_django

./: README.md  cat_data.json  catalog_data.json  pyproject.toml  users_data.json
catalog/: admin.py  forms.py  models.py  service.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_created_at.py  0003_blog_remove_product_created_at_alter_product_image.py  0004_alter_blog_publication_sign_alter_blog_slug.py  0005_alter_blog_publication_sign.py  0006_version.py  0007_product_owner.py  0008_product_is_published.py
catalog/templates/: tables.html
catalog/templates/design/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contact_page.html  item_detail.html  items_page.html  main_page.html  one_blog_template.html  product_confirm_delete.html  product_form.html
catalog/templatetags/: media_filters.py  mediapath.py
config/: settings.py  urls.py
static/style/: style.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_groups.py
users/templates/users/: login.html  registration.html  user_form.html
